objects/Toyota_WEC__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Toyota WEC</label>
</CustomObject>